swagger documenation lacks any with :id
