# swagger.json
@@ -11,26 +11,20 @@
         "schemas":{
             "Badge": {
                 "type": "object",
-                "required": ["name", "image", "reqAchivement", "rewardPoints"],
+                "required": ["name", "image", "reqPoints","requisits" ,"rewardPoints"],
                 "properties": {
                     "name": {
                         "type": "string"
                     }, 
                     "image": {
                         "type": "link"
-                    }, 
-                    "reqAchivement": {
-                        "type":"object",
-                        "properties":{ 
-                            "reqPoints": {
-                                "type": "number"
-                            },
-                            "requisits": {
-                                "type": "string"
-                            }
-                        },
-                        "required": ["points","requisitos"]
-                    }, 
+                    },
+                    "reqPoints": {
+                        "type": "integer"
+                    },
+                    "requisits": {
+                        "type": "string"
+                    },
                     "rewardPoints": {
                         "type": "integer"
                     }
@@ -44,7 +38,7 @@
                         "type": "string"
                     }, 
                     "contact": {
-                        "type": "string"
+                        "type": "integer"
                     },
                     "desc": {
                         "type": "string"
@@ -67,20 +61,38 @@
                     "workers": {
                         "type":"object",
                         "properties":{ 
-                            "name": {
-                                "type": "string"
-                            },
                             "id": {
                                 "type": "string"
                             }
                         },
-                        "required": ["name","id"]
+                        "required": ["id"]
+                    }
+                }
+            },
+            "Task": {
+                "type": "object",
+                "required": ["title", "worker_id", "project_id", "timeSpent"],
+                "properties": {
+                    "title": {
+                        "type": "string"
+                    }, 
+                    "worker_id": {
+                        "type": "string"
+                    },
+                    "project_id": {
+                        "type": "string"
+                    },
+                    "desc": {
+                        "type":"string"
+                    }, 
+                    "timeSpent": {
+                        "type": "integer"
                     }
                 }
             },
             "Team": {
                 "type": "object",
-                "required": ["title", "desc"],
+                "required": ["title"],
                 "properties": {
                     "title": {
                         "type": "string"
@@ -91,57 +103,36 @@
                     "workers": {
                         "type":"object",
                         "properties":{ 
-                            "name": {
-                                "type": "string"
-                            },
                             "id": {
                                 "type": "string"
                             }
                         },
-                        "required": ["name","id"]
+                        "required": ["id"]
                     }
                 }
             },
             "Worker": {
                 "type": "object",
-                "required": ["name", "admin", "password"],
+                "required": ["name", "password"],
                 "properties": {
                     "name": {
                         "type": "string"
                     }, 
                     "admin": {
                         "type": "boolean"
-                    }, 
+                    },
                     "password": {
                         "type": "string"
-                    }, 
+                    },
                     "email": {
                         "type": "string"
                     }, 
                     "badges": {
                         "type": "object",
-                        "required": ["name", "image", "reqAchivement", "rewardPoints"],
+                        "required": ["id"],
                         "properties": {
-                            "name": {
+                            "id": {
                                 "type": "string"
-                            }, 
-                            "image": {
-                                "type": "link"
-                            }, 
-                            "reqAchivement": {
-                                "type":"object",
-                                "properties":{ 
-                                    "reqPoints": {
-                                        "type": "number"
-                                    },
-                                    "requisits": {
-                                        "type": "string"
-                                    }
-                                },
-                                "required": ["points","requisitos"]
-                            }, 
-                            "rewardPoints": {
-                                "type": "integer"
                             }
                         }
                     }, 
@@ -158,24 +149,6 @@
                         "type": "integer"
                     }
                 }
-            },
-            "Task": {
-                "type": "object",
-                "required": ["title", "worker", "timeSpent"],
-                "properties": {
-                    "title": {
-                        "type": "string"
-                    }, 
-                    "worker": {
-                        "type": "string"
-                    }, 
-                    "desc": {
-                        "type":"string"
-                    }, 
-                    "timeSpent": {
-                        "type": "integer"
-                    }
-                }
             }
         },
         "securitySchemes": {
@@ -185,7 +158,7 @@
                 "bearerFormat": "JWT"
             }
         }
-    }, 
+    },
     "paths": {
         "/workers/login": {
             "post": {
@@ -234,6 +207,21 @@
                                 "examples": {
                                     "Error": {
                                         "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Not Authorized"
                                     }
                                 }
                             }
@@ -312,6 +300,205 @@
                     }
                 }
             }
+        },
+        "/workers/getAll": {
+            "get": {
+                "description": "Get All Workers",
+                "tags": ["workers"],
+                "responses": {
+                    "200": {
+                        "description": "Worker List",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Worker"
+                                },
+                                "examples": {
+                                    "Worker List": [
+                                        {
+                                            "_id": "5fac346470a04c174c2e121f",
+                                            "name": "user",
+                                            "admin": false,
+                                            "password": "5rftft67gyh8j",
+                                            "email": "user@gmail.com",
+                                            "tasksDone": 0,
+                                            "hoursWorked": 0,
+                                            "projectsInvolved": 0,
+                                            "HoursForTheDay": 0
+                                        },
+                                        {
+                                            "_id": "5fac347970a04c174c2e1220",
+                                            "name": "user",
+                                            "admin": false,
+                                            "password": "5rftft67gyh8j",
+                                            "email": "user@gmail.com",
+                                            "tasksDone": 0,
+                                            "hoursWorked": 0,
+                                            "projectsInvolved": 0,
+                                            "HoursForTheDay": 0
+                                        }
+                                    ]
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not Authorized"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not found"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
+            }
+        },
+        "/workers/{:id}": {
+            "get": {
+                "description": "Get one Worker",
+                "tags": ["workers"],
+                "parameters": [
+                    {
+                      "name": "id",
+                      "in": "path",
+                      "description": "ID of worker to use",
+                      "required": true,
+                      "schema": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      },
+                      "style": "simple"
+                    }
+                  ],
+                "responses": {
+                    "200": {
+                        "description": "Worker info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Worker"
+                                },
+                                "examples": {
+                                    "Worker List": 
+                                        {
+                                            "_id": "5fac346470a04c174c2e121f",
+                                            "name": "user",
+                                            "admin": false,
+                                            "password": "5rftft67gyh8j",
+                                            "email": "user@gmail.com",
+                                            "tasksDone": 0,
+                                            "hoursWorked": 0,
+                                            "projectsInvolved": 0,
+                                            "HoursForTheDay": 0
+                                        }
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Authorized",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not Authorized"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Not found"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
+            }
         }
+
+
     }
 }
